--- a/css/lists-tables.css
+++ b/css/lists-tables.css
@@ -20,3 +20,39 @@
     background: rgb(255, 204, 204);
     margin: 5px;
 }
+
+.ordered {
+    background: rgb(255, 117, 117);
+    padding: 20px;
+    width: 20%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.3em;
+    }
+
+    .ordered li {
+    background: #ff9090;
+    padding: 5px;
+    margin-left: 20px;
+}
+
+.custom-box-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+    
+    .custom-box-list li {
+    counter-increment: step-counter;
+    margin-bottom: 10px;    
+}
+    
+    .custom-box-list li::before {
+    content: counter(step-counter);
+    margin-right: 5px;
+    font-size: 80%;
+    background-color: rgb(255, 204, 204);
+    color: rgb(255, 117, 117);
+    font-weight: bold;
+    padding: 3px 8px;
+    border-radius: 3px;    
+}
