--- a/css/lists-tables.css
+++ b/css/lists-tables.css
@@ -56,3 +56,51 @@
     padding: 3px 8px;
     border-radius: 3px;    
 }
+
+.list-image {
+    list-style: none;
+    padding-left: 0;    
+}
+
+.list-image li {
+    position: relative;
+    padding-left: 30px;    
+    line-height: 170%;
+}
+
+.list-image li:before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    background-image: url('apple.png');
+    background-size: cover;
+    background-position: center;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.popular-sites {
+    list-style: none;
+    padding-left: 0;    
+}
+
+.popular-sites li {
+    position: relative;
+    padding-left: 30px;    
+    line-height: 170%;
+}
+
+.popular-sites li:before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    background-image: url('fire.png');
+    background-size: cover;
+    background-position: center;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
