--- a/css/lists-tables.css
+++ b/css/lists-tables.css
@@ -73,7 +73,7 @@
     width: 20px;
     height: 20px;
     position: absolute;
-    background-image: url('apple.png');
+    background-image: url('appler.png');
     background-size: cover;
     background-position: center;
     left: 0;
@@ -83,24 +83,58 @@
 
 .popular-sites {
     list-style: none;
-    padding-left: 0;    
+    padding-left: 0;
 }
-
 .popular-sites li {
     position: relative;
-    padding-left: 30px;    
+    padding-left: 30px;
     line-height: 170%;
 }
-
 .popular-sites li:before {
     content: '';
     width: 20px;
     height: 20px;
     position: absolute;
-    background-image: url('fire.png');
+    background-image: url('firer.png');
     background-size: cover;
     background-position: center;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
 }
+
+table, th,td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+  
+th,td {
+    padding: 15px;
+    text-align: center;
+}
+  
+caption {
+    caption-side: bottom;
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    color: black;
+}
+  
+.table-simple th {
+    background-color: rgb(255, 117, 117);
+    color: white;
+}
+  
+.table-simple tr:nth-child(even) {
+    background-color: rgb(255, 204, 204);
+}
+  
+.table-simple tr:nth-child(odd) {
+    background-color: #fff;
+}
+  
+.table-simple tr:hover {
+    background-color: #ff9090;
+}
+  
