--- a/css/lists-tables.css
+++ b/css/lists-tables.css
@@ -138,3 +138,32 @@ caption {
     background-color: #ff9090;
 }
   
+.head-body-foot thead {
+    color: purple;
+    background-color: rgb(243, 136, 13);
+}
+   
+.head-body-foot tbody {
+    color: rgb(182, 212, 182);
+    font-weight: bold;
+    background-color: rgb(68, 39, 177);
+}
+   
+.head-body-foot tfoot {
+    color: rgb(5, 4, 0);
+    background-color: rgb(227, 231, 233);
+    font-weight:bold ;
+}
+
+.head-body-foot thead:hover {
+    background-color: #acffe3;
+}
+
+.head-body-foot tbody:hover {
+    background-color: #8aff1d;
+}
+
+.head-body-foot tfoot:hover {
+    background-color: #ff44ff;
+}
+
