--- a/css/lists-tables.css
+++ b/css/lists-tables.css
@@ -167,3 +167,39 @@ caption {
     background-color: #ff44ff;
 }
 
+.many-columns {
+    box-shadow: 50px 1px 20px rgba(0, 0, 0, 0.15);
+}
+
+.scroll_bar {
+    overflow-x: auto;
+}
+
+.bottom-tr {
+    vertical-align: bottom;
+}
+
+.table-image {
+    margin: 0 auto;
+  }
+
+  table.GeneratedTable {
+    width: 100%;
+    background-color: #ff9090;
+    border-collapse: collapse;
+    border-width: 2px;
+    border-color: #ffcccc;
+    border-style: double;
+    color: #ffffff;
+  }
+  
+  table.GeneratedTable td, table.GeneratedTable th {
+    border-width: 2px;
+    border-color: #ffcccc;
+    border-style: double;
+    padding: 3px;
+  }
+  
+  table.GeneratedTable thead {
+    background-color: #ff7575;
+  }
